@@ -19,6 +19,7 @@
 #include "lvm-string.h"
 #include "config.h"
 #include "metadata.h"
+#include "bitset.h"
 
 #include <dirent.h>
 #include <unistd.h>
@@ -38,10 +39,16 @@ typedef struct {
 } device_info_t;
 
 static int _md_major = -1;
+static bitset_t _dm_bitset;
 
 int md_major(void)
 {
 	return _md_major;
+}
+
+int is_dm_major(int major)
+{
+	return bit(_dm_bitset, major) ? 1 : 0;
 }
 
 /*
@@ -181,6 +188,11 @@ static int _scan_proc_dev(const char *proc, const struct config_node *cn)
 		if (!strncmp("md", line + i, 2) && isspace(*(line + i + 2)))
 			_md_major = line_maj;
 
+		/* Look for dm devices */
+		if (!strncmp("device-mapper", line + i, 13) &&
+		    isspace(*(line + i + 13)))
+			bit_set(_dm_bitset, line_maj);
+
 		/* Go through the valid device names and if there is a
 		   match store max number of partitions */
 		for (j = 0; device_info[j].name != NULL; j++) {
@@ -251,6 +263,12 @@ struct dev_filter *lvm_type_filter_create(const char *proc,
 	f->destroy = lvm_type_filter_destroy;
 	f->private = NULL;
 
+	if (!(_dm_bitset = bitset_create(NULL, NUMBER_OF_MAJORS))) {
+		stack;
+		dbg_free(f);
+		return NULL;
+	}
+
 	if (!_scan_proc_dev(proc, cn)) {
 		stack;
 		return NULL;
@@ -261,6 +279,7 @@ struct dev_filter *lvm_type_filter_create(const char *proc,
 
 void lvm_type_filter_destroy(struct dev_filter *f)
 {
+	bitset_destroy(_dm_bitset);
 	dbg_free(f);
 	return;
 }
